Prevent overlap of assesssment panel title on cutout triangle area

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -11976,6 +11976,7 @@ body.page-node-type-site #sidemenu {
 @media screen and (max-width: 767px) {
   .assessment-toggle .assessment-toggle > .panel-heading {
     position: relative;
+    padding-right: 4em;
   }
   .assessment-toggle .assessment-toggle > .panel-heading:before,
   .assessment-toggle .assessment-toggle > .panel-heading:after {
