--- a/docroot/themes/iucn_who/less/theme/assessments.less
+++ b/docroot/themes/iucn_who/less/theme/assessments.less
@@ -609,9 +609,9 @@ body.page-node-type-site {
   }
   .assessment-toggle {
     @media @grid-mobile {
-
       > .panel-heading {
         position: relative;
+        padding-right: 4em;
         &:before,
         &:after {
           border-color: @body-bg transparent transparent transparent;
